Add dynamic metadata, precursor to command-line operations